# whatsapp_formatter

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
src/whatsapp_formatter/: converter.py  rules.py
