[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-whatsapp-formatter"
version = "1.0.5"
description = "Python library for converting Markdown and HTML to WhatsApp text formatting and vice versa. Bidirectional converter for WhatsApp message formatting with support for bold, italic, strikethrough, code blocks, and nested formatting. Perfect for WhatsApp chatbots, messaging automation, and WhatsApp Business API."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Tejas Ambhore", email = "tejasam2020@gmail.com"}
]
keywords = [
    "whatsapp",
    "markdown",
    "html",
    "formatter",
    "converter",
    "markdown-to-whatsapp",
    "html-to-whatsapp",
    "whatsapp-formatting",
    "whatsapp-markdown",
    "text-formatting",
    "messaging",
    "chat-formatter",
    "whatsapp-api",
    "whatsapp-converter",
    "chatbot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/tejasambhore/whatsapp_formatter"
Documentation = "https://py-whatsapp-formatter.readthedocs.io"
Repository = "https://github.com/tejasambhore/whatsapp_formatter"
Issues = "https://github.com/tejasambhore/whatsapp_formatter/issues"
Changelog = "https://github.com/tejasambhore/whatsapp_formatter/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
whatsapp_formatter = ["py.typed"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

